# misis_edu

./: 0001a.cpp
akperov_e_b/: 0004a.cpp  0043a.cpp  0136a.cpp  0136b.cpp  0263-second-solution.cpp  0263a.cpp  0268b.cpp  0271a.cpp  0276a.cpp  0294a.cpp  0441a.cpp  0467a.cpp  0485a.cpp  0499b.cpp  0579a.cpp  0610a.cpp  0617a.cpp  0703a.cpp  0705a.cpp  0879b.cpp  0886b.cpp  0886b_solutionwithmap.cpp  0915a.cpp  0935b.cpp  0967b.cpp  0978a.cpp  1017a.cpp  1100c.cpp  1165b.cpp  1330a.cpp  1352a.cpp  1367a.cpp  1404a.cpp  1501a.cpp  1512b.cpp  1512c.cpp  1559a.cpp  1585a.cpp  1632a.cpp  1632b.cpp  (+42 more)
akperov_e_b/geom/: CMakeLists.txt  geom.cpp  geom.hpp
akperov_e_b/vectormath/: CMakeLists.txt  vectormath.hpp  vectormath01.cpp
